# stitching_traversability_graph

./: CMakeLists.txt  README.md  README.md~  package.xml
cfg/: rviz_config.rviz
include/: stitching_traversability_graph.hpp
launch/: rosbag_play1.launch  rosbag_play2.launch  rosbag_play2.launch~  rosbag_stitching_traversability_astar.launch  rosbag_stitching_traversability_astar.launch~  rosbag_stitching_traversability_graph.launch  rosbag_stitching_traversability_graph.launch~
src/: a_star_planner.cpp  pixel_to_metric_path_node.cpp  stitching_traversability_graph_node.cpp
